--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "node-sample",
-  "description": "Our sample Node to Heroku app",
-  "main": "server.js",
+  "name": "movieapp",
+  "version": "1.0.0",
+  "description": "movie app quiz week 1",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }, "dependencies": {
+      "body-parser": "~1.14.2",
+      "consolidate": "~0.13.1",
+      "express": "~4.13.3",
+      "mongodb": "~2.1.3",
+      "nunjucks": "~2.2.0"
   },
-  "dependencies": {
-    "ejs": "~1.0.0",
-    "express": "~4.9.8"
-  }
+  "author": "",
+  "license": "ISC"
 }
