--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "movie app quiz week 1",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }, "dependencies": {
+    "start": "node app.js"
+}, "dependencies": {
       "body-parser": "~1.14.2",
       "consolidate": "~0.13.1",
       "express": "~4.13.3",
