--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "ejs": "~1.0.0",
-    "express": "~4.9.8"
+    "express": "~4.9.8",
+    "mongodb": "^2.1.18"
   },
   "version": "1.0.1",
   "devDependencies": {},
